# journal

./: .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  Makefile  README.md  analysis.md  task.md
.github/workflows/: ci.yml
assets/packs/journal@0.1.0/: pack.json
assets/packs/journal@0.1.0/types/: entry.schema.json  session.schema.json
docs/: critique.md  project-setup.md  spec.md
src/journal/: Cargo.toml
src/journal/src/: action.rs  effects.rs  error.rs  main.rs  state.rs  update.rs  view.rs
test_vault/.aethel/packs/journal@0.1.0/: pack.json
todos/: project-description.md  todo.md
todos/done/: 2025-08-03-19-08-11-github-actions-analysis.md  2025-08-03-19-08-11-github-actions.md  2025-08-03-19-10-37-implement-view-layer-analysis.md  2025-08-03-19-10-37-implement-view-layer.md  2025-08-03-19-12-13-fix-state-management-analysis.md
