[workspace]
members = [
    "src/journal"
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Journal Contributors"]
license = "MIT"
repository = "https://github.com/journal/journal"

[workspace.dependencies]
# Local dependencies
aethel-core = { path = "external/aethel/crates/aethel-core" }
aethel-cli = { path = "external/aethel/crates/aethel-cli" }

# Align with Aethel's dependencies (copied from external/aethel/Cargo.toml)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
semver = { version = "1.0", features = ["serde"] }
jsonschema = "0.26"
thiserror = "2.0"
anyhow = "1.0"
tempfile = "3.14"
glob = "0.3"
walkdir = "2.5"
once_cell = "1.20"
parking_lot = "0.12"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rstest = "0.24"
assert_matches = "1.5"
insta = { version = "1.41", features = ["json", "yaml"] }
assert_cmd = "2.0"
predicates = "3.1"

# Additional dependencies for journal
tokio = { version = "1.0", features = ["full"] }
crossterm = "0.27"
dialoguer = "0.11"
console = "0.15"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
opt-level = 0