[package]
name = "journal"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Interactive empathetic journaling tool built on Aethel"

[[bin]]
name = "journal"
path = "src/main.rs"

[dependencies]
# Workspace dependencies from Aethel
aethel-core = { workspace = true }

# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }

# Additional dependencies for journal functionality
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.11"
console = "0.15"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"